--- a/intex.html
+++ b/intex.html
@@ -7,758 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
-    <style>
-        /* Reset & Base Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        :root {
-            --navy-blue: #0A2342;
-            --gold: #BF9B30;
-            --white: #FFFFFF;
-            --light-gray: #F5F5F5;
-            --dark-gray: #333333;
-        }
-
-        body {
-            font-family: 'Lora', serif;
-            color: var(--dark-gray);
-            line-height: 1.6;
-            background-color: var(--white);
-            overflow-x: hidden;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-            color: var(--navy-blue);
-            margin-bottom: 1rem;
-        }
-
-        h1 {
-            font-size: 3rem;
-            line-height: 1.2;
-        }
-
-        h2 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-        }
-
-        h3 {
-            font-size: 1.75rem;
-        }
-
-        p {
-            margin-bottom: 1rem;
-            font-size: 1.05rem;
-        }
-
-        a {
-            text-decoration: none;
-            color: inherit;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .section {
-            padding: 5rem 0;
-        }
-
-        .section-title {
-            text-align: center;
-            position: relative;
-            margin-bottom: 3rem;
-        }
-
-        .section-title:after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80px;
-            height: 3px;
-            background-color: var(--gold);
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 0.8rem 2rem;
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .btn-primary {
-            background-color: var(--gold);
-            color: var(--white);
-            border: 2px solid var(--gold);
-        }
-
-        .btn-secondary {
-            background-color: transparent;
-            color: var(--navy-blue);
-            border: 2px solid var(--navy-blue);
-        }
-
-        .btn-primary:hover {
-            background-color: transparent;
-            color: var(--gold);
-        }
-
-        .btn-secondary:hover {
-            background-color: var(--navy-blue);
-            color: var(--white);
-        }
-
-        .text-center {
-            text-align: center;
-        }
-
-        /* Header & Navigation */
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-            background-color: var(--navy-blue);
-            padding: 1.5rem 0;
-            transition: all 0.3s ease;
-        }
-
-        header.scrolled {
-            background-color: var(--navy-blue);
-            padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .header-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .logo {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-            font-size: 1.75rem;
-            color: var(--white);
-        }
-
-        .logo span {
-            color: var(--gold);
-        }
-
-        .nav-toggler {
-            display: none;
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 1.5rem;
-            color: var(--white);
-        }
-
-        .nav-menu {
-            display: flex;
-            list-style: none;
-        }
-
-        .nav-item {
-            margin-left: 2rem;
-        }
-
-        .nav-link {
-            color: var(--white);
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 500;
-            font-size: 1rem;
-            position: relative;
-            transition: all 0.3s ease;
-        }
-
-        .nav-link:after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background-color: var(--gold);
-            transition: all 0.3s ease;
-        }
-
-        .nav-link:hover:after {
-            width: 100%;
-        }
-
-        /* Hero Section */
-        .hero {
-            position: relative;
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            color: var(--white);
-        }
-
-        .hero:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(148, 169, 196, 0.7);
-            z-index: 1;
-        }
-
-        .slideshow {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        .slideshow-item {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0;
-            transition: opacity 2s ease;
-            object-fit: cover;
-        }
-
-        .slideshow-item.active {
-            opacity: 1;
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-            max-width: 900px;
-            padding: 0 20px;
-        }
-
-        .hero-subtitle {
-            font-family: 'Lora', serif;
-            font-size: 1.25rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .hero-cta {
-            margin-top: 2rem;
-        }
-
-        .hero-cta .btn:first-child {
-            margin-right: 1rem;
-        }
-
-        /* Who We Are Section */
-        .about {
-            background-color: var(--light-gray);
-        }
-
-        .about-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
-
-        .about-text {
-            max-width: 800px;
-            margin-bottom: 3rem;
-            font-size: 1.2rem;
-        }
-
-        .world-map {
-            position: relative;
-            width: 100%;
-            max-width: 900px;
-            height: 500px;
-            background: url('/api/placeholder/900/500') center/contain no-repeat;
-        }
-
-        .map-point {
-            position: absolute;
-            width: 16px;
-            height: 16px;
-            background-color: var(--gold);
-            border-radius: 50%;
-            transform: translate(-50%, -50%);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .map-point:hover {
-            transform: translate(-50%, -50%) scale(1.5);
-            box-shadow: 0 0 10px var(--gold);
-        }
-
-        .map-point:before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 24px;
-            height: 24px;
-            border: 2px solid var(--gold);
-            border-radius: 50%;
-            opacity: 0;
-            animation: pulse 2s infinite;
-        }
-
-        .point-sl {
-            top: 65%;
-            left: 70%;
-        }
-
-        .point-eu {
-            top: 30%;
-            left: 50%;
-        }
-
-        .point-af {
-            top: 60%;
-            left: 52%;
-        }
-
-        .map-tooltip {
-            position: absolute;
-            background-color: var(--navy-blue);
-            color: var(--white);
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            font-size: 0.9rem;
-            transform: translateY(-40px);
-            opacity: 0;
-            pointer-events: none;
-            transition: all 0.3s ease;
-            white-space: nowrap;
-        }
-
-        .map-point:hover .map-tooltip {
-            opacity: 1;
-            transform: translateY(-50px);
-        }
-
-        @keyframes pulse {
-            0% {
-                transform: translate(-50%, -50%) scale(1);
-                opacity: 1;
-            }
-            100% {
-                transform: translate(-50%, -50%) scale(2);
-                opacity: 0;
-            }
-        }
-
-        /* Industries Section */
-        .industries .container {
-            max-width: 1400px;
-        }
-
-        .industry-carousel {
-            position: relative;
-            overflow: hidden;
-            padding: 2rem 0;
-        }
-
-        .industry-container {
-            display: flex;
-            transition: transform 0.5s ease;
-        }
-
-        .industry-card {
-            flex: 0 0 calc(33.33% - 20px);
-            margin: 0 10px;
-            min-width: 300px;
-            background-color: var(--white);
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .industry-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .industry-img {
-            height: 200px;
-            overflow: hidden;
-        }
-
-        .industry-img img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.5s ease;
-        }
-
-        .industry-card:hover .industry-img img {
-            transform: scale(1.1);
-        }
-
-        .industry-content {
-            padding: 1.5rem;
-        }
-
-        .industry-title {
-            color: var(--navy-blue);
-            font-size: 1.5rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .carousel-btn {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: var(--navy-blue);
-            color: var(--white);
-            font-size: 1.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            z-index: 10;
-            transition: all 0.3s ease;
-        }
-
-        .carousel-btn:hover {
-            background-color: var(--gold);
-        }
-
-        .carousel-btn.prev {
-            left: 20px;
-        }
-
-        .carousel-btn.next {
-            right: 20px;
-        }
-
-        .carousel-dots {
-            display: flex;
-            justify-content: center;
-            margin-top: 2rem;
-        }
-
-        .dot {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: var(--light-gray);
-            margin: 0 5px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .dot.active {
-            background-color: var(--gold);
-            transform: scale(1.2);
-        }
-
-        /* Philosophy Section */
-        .philosophy {
-            background-color: var(--navy-blue);
-            color: var(--white);
-        }
-
-        .philosophy .section-title {
-            color: var(--white);
-        }
-
-        .philosophy-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 2rem;
-        }
-
-        .philosophy-item {
-            flex: 0 0 calc(25% - 2rem);
-            min-width: 200px;
-            text-align: center;
-            padding: 2rem;
-            background-color: rgba(255, 255, 255, 0.05);
-            border-radius: 8px;
-            transition: all 0.3s ease;
-        }
-
-        .philosophy-item:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            transform: translateY(-10px);
-        }
-
-        .philosophy-icon {
-            font-size: 3rem;
-            color: var(--gold);
-            margin-bottom: 1.5rem;
-        }
-
-        .philosophy-title {
-            color: var(--white);
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-        }
-
-        /* Partner Section */
-        .partner {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-        }
-
-        .partner-text {
-            flex: 1 1 500px;
-            padding: 2rem;
-        }
-
-        .partner-cta {
-            flex: 1 1 300px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 2rem;
-        }
-
-        .partner-cta .btn {
-            padding: 1rem 3rem;
-            font-size: 1.2rem;
-        }
-
-        /* Footer */
-        footer {
-            background-color: var(--navy-blue);
-            color: var(--white);
-            padding: 4rem 0 2rem;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-bottom: 3rem;
-        }
-
-        .footer-logo {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-            font-size: 2rem;
-            color: var(--white);
-            margin-bottom: 1rem;
-        }
-
-        .footer-logo span {
-            color: var(--gold);
-        }
-
-        .footer-links h3 {
-            color: var(--white);
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            position: relative;
-        }
-
-        .footer-links h3:after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 0;
-            width: 50px;
-            height: 2px;
-            background-color: var(--gold);
-        }
-
-        .footer-links ul {
-            list-style: none;
-        }
-
-        .footer-links li {
-            margin-bottom: 0.8rem;
-        }
-
-        .footer-links a {
-            color: rgba(255, 255, 255, 0.8);
-            transition: all 0.3s ease;
-        }
-
-        .footer-links a:hover {
-            color: var(--gold);
-            padding-left: 5px;
-        }
-
-        .footer-social {
-            display: flex;
-            margin-top: 1.5rem;
-        }
-
-        .social-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: rgba(255, 255, 255, 0.1);
-            margin-right: 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-            transition: all 0.3s ease;
-        }
-
-        .social-icon:hover {
-            background-color: var(--gold);
-            transform: translateY(-5px);
-        }
-
-        .footer-bottom {
-            text-align: center;
-            padding-top: 2rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            font-size: 0.9rem;
-            color: rgba(255, 255, 255, 0.6);
-        }
-
-        /* Responsive Styles */
-        @media screen and (max-width: 992px) {
-            h1 {
-                font-size: 2.5rem;
-            }
-
-            h2 {
-                font-size: 2rem;
-            }
-
-            .hero {
-                height: 90vh;
-            }
-
-            .industry-card {
-                flex: 0 0 calc(50% - 20px);
-            }
-
-            .philosophy-item {
-                flex: 0 0 calc(50% - 2rem);
-            }
-        }
-
-        @media screen and (max-width: 768px) {
-            .nav-menu {
-                position: fixed;
-                top: 80px;
-                right: -100%;
-                flex-direction: column;
-                background-color: var(--navy-blue);
-                width: 100%;
-                text-align: center;
-                transition: all 0.3s ease;
-                padding: 2rem 0;
-                box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-            }
-
-            .nav-menu.active {
-                right: 0;
-            }
-
-            .nav-item {
-                margin: 1.5rem 0;
-            }
-
-            .nav-toggler {
-                display: block;
-            }
-
-            .hero-content h1 {
-                font-size: 2.2rem;
-            }
-
-            .hero-subtitle {
-                font-size: 1.1rem;
-            }
-
-            .world-map {
-                height: 300px;
-            }
-
-            .industry-card {
-                flex: 0 0 calc(100% - 20px);
-            }
-
-            .carousel-btn {
-                width: 40px;
-                height: 40px;
-                font-size: 1.2rem;
-            }
-
-            .carousel-btn.prev {
-                left: 10px;
-            }
-
-            .carousel-btn.next {
-                right: 10px;
-            }
-
-            .philosophy-item {
-                flex: 0 0 calc(100% - 2rem);
-            }
-
-            .partner {
-                text-align: center;
-            }
-
-            .partner-text, .partner-cta {
-                flex: 1 1 100%;
-            }
-        }
-
-        @media screen and (max-width: 576px) {
-            .hero-content h1 {
-                font-size: 2rem;
-            }
-
-            .section {
-                padding: 3rem 0;
-            }
-
-            .btn {
-                padding: 0.7rem 1.5rem;
-                font-size: 0.9rem;
-            }
-
-            .hero-cta .btn {
-                margin: 0.5rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
